@@ -425,11 +425,11 @@ public class RequestSpecBuilder {
      * Method to remove parameter added with {@link #addParameter(String, Object...)} from map.
      * Removes all values of this parameter
      *
-     * @param parameterName   The parameter key
+     * @param parameterName The parameter key
      * @return The request specification builder
      */
-    public RequestSpecBuilder clearParam(String parameterName) {
-        spec.clearParam(parameterName);
+    public RequestSpecBuilder removeParam(String parameterName) {
+        spec.removeParam(parameterName);
         return this;
     }
 
@@ -514,11 +514,11 @@ public class RequestSpecBuilder {
      * Method to remove parameter added with {@link #addQueryParameter(String, Object...)} from map.
      * Removes all values of this parameter
      *
-     * @param parameterName   The parameter key
+     * @param parameterName The parameter key
      * @return The request specification builder
      */
-    public RequestSpecBuilder clearQueryParam(String parameterName) {
-        spec.clearQueryParam(parameterName);
+    public RequestSpecBuilder removeQueryParam(String parameterName) {
+        spec.removeQueryParam(parameterName);
         return this;
     }
 
@@ -599,20 +599,17 @@ public class RequestSpecBuilder {
         return this;
     }
 
-
     /**
      * Method to remove parameter added with {@link #addFormParameter(String, Object...)} from map.
      * Removes all values of this parameter
      *
-     * @param parameterName   The parameter key
+     * @param parameterName The parameter key
      * @return The request specification builder
      */
-    public RequestSpecBuilder clearFormParam(String parameterName) {
-        spec.clearFormParam(parameterName);
+    public RequestSpecBuilder removeFormParam(String parameterName) {
+        spec.removeFormParam(parameterName);
         return this;
     }
-
-
 
     /**
      * Specify a path parameter. Path parameters are used to improve readability of the request path. E.g. instead
@@ -745,6 +742,18 @@ public class RequestSpecBuilder {
      */
     public RequestSpecBuilder addPathParams(Map<String, ?> parameterNameValuePairs) {
         spec.pathParams(parameterNameValuePairs);
+        return this;
+    }
+
+    /**
+     * Method to remove parameter added with {@link #addPathParameter(String, Object)} from map.
+     * Removes all values of this parameter.
+     *
+     * @param parameterName The parameter key
+     * @return The request specification builder
+     */
+    public RequestSpecBuilder removePathParam(String parameterName) {
+        spec.removePathParam(parameterName);
         return this;
     }
 
@@ -1142,6 +1151,7 @@ public class RequestSpecBuilder {
      * given().specification(specs)
      * </pre>
      * uses {@link #setBaseUri(String)}
+     *
      * @param uri The URI
      * @return RequestSpecBuilder
      */
