@@ -7,6 +7,7 @@ Change log next version
   will generate error messages that are close to original Hamcrest messages. The other option is REST_ASSURED which uses the default error messages generated by REST Assured.
 * Made it possible to configure whether to automatically append charset to content-type for all content types using the EncoderConfig (issue 355).
 * Deprecated "appendDefaultContentCharsetToStreamingContentTypeIfUndefined" in EncoderConfig. Just use "appendDefaultContentCharsetToContentTypeIfUndefined" instead.
+* Added ability to remove parameters from a request specification using the RequestSpecBuilder (thanks to Merkushev Kirill for the help).
 
 Change log 2.3.3 (2014-08-29)
 ----------------------------
